--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-app",
+  "name": "react-app-test",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://irfanayaz89.github.io/react-app-test",
